@@ -28,7 +28,6 @@ import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.FutureTask;
 import java.util.concurrent.RunnableFuture;
-import java.util.concurrent.ThreadPoolExecutor;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import org.apache.lucene.document.Document;
@@ -229,18 +228,11 @@ public class IndexSearcher {
    * @lucene.experimental
    */
   public IndexSearcher(IndexReaderContext context, Executor executor) {
-    this(context, executor, getSliceExecutionControlPlane(executor));
-  }
-
-  // Package private for testing
-  IndexSearcher(IndexReaderContext context, Executor executor, TaskExecutor taskExecutor) {
     assert context.isTopLevel
         : "IndexSearcher's ReaderContext must be topLevel for reader" + context.reader();
-    assert (taskExecutor == null) == (executor == null);
-
     reader = context.reader();
     this.executor = executor;
-    this.taskExecutor = taskExecutor;
+    this.taskExecutor = executor == null ? null : new TaskExecutor(executor);
     this.readerContext = context;
     leafContexts = context.leaves();
     leafSlicesSupplier =
@@ -1036,19 +1028,6 @@ public class IndexSearcher {
           "Query contains too many nested clauses; maxClauseCount is set to "
               + IndexSearcher.getMaxClauseCount());
     }
-  }
-
-  /** Return the SliceExecutionControlPlane instance to be used for this IndexSearcher instance */
-  private static TaskExecutor getSliceExecutionControlPlane(Executor executor) {
-    if (executor == null) {
-      return null;
-    }
-
-    if (executor instanceof ThreadPoolExecutor) {
-      return new QueueSizeBasedExecutor((ThreadPoolExecutor) executor);
-    }
-
-    return new TaskExecutor(executor);
   }
 
   /**
