@@ -19,19 +19,12 @@ package org.apache.lucene.search;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.Random;
-import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
 import java.util.concurrent.LinkedBlockingQueue;
-import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
@@ -255,7 +248,7 @@ public class TestIndexSearcher extends LuceneTestCase {
     IOUtils.close(r, dir);
   }
 
-  public void testOneSegmentExecutesOnTheCallerThread() throws IOException {
+  public void testMultipleSegmentsExecuteOnTheExecutor() throws IOException {
     List<LeafReaderContext> leaves = reader.leaves();
     AtomicInteger numExecutions = new AtomicInteger(0);
     IndexSearcher searcher =
@@ -278,188 +271,7 @@ public class TestIndexSearcher extends LuceneTestCase {
     if (leaves.size() <= 1) {
       assertEquals(0, numExecutions.get());
     } else {
-      assertEquals(leaves.size() - 1, numExecutions.get());
-    }
-  }
-
-  public void testRejectedExecution() throws IOException {
-    ExecutorService service = new RejectingMockExecutor();
-
-    IndexSearcher searcher =
-        new IndexSearcher(reader, service) {
-          @Override
-          protected LeafSlice[] slices(List<LeafReaderContext> leaves) {
-            ArrayList<LeafSlice> slices = new ArrayList<>();
-            for (LeafReaderContext ctx : leaves) {
-              slices.add(new LeafSlice(Arrays.asList(ctx)));
-            }
-            return slices.toArray(new LeafSlice[0]);
-          }
-        };
-
-    // To ensure that failing ExecutorService still allows query to run
-    // successfully
-    TopDocs topDocs = searcher.search(new MatchAllDocsQuery(), 10);
-    assert topDocs.scoreDocs.length == 10;
-
-    service.shutdown();
-  }
-
-  private static class RejectingMockExecutor implements ExecutorService {
-
-    @Override
-    public void shutdown() {}
-
-    @Override
-    public List<Runnable> shutdownNow() {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean isShutdown() {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean isTerminated() {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean awaitTermination(final long l, final TimeUnit timeUnit)
-        throws InterruptedException {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public <T> Future<T> submit(final Callable<T> tCallable) {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public <T> Future<T> submit(final Runnable runnable, final T t) {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public Future<?> submit(final Runnable runnable) {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public <T> List<Future<T>> invokeAll(final Collection<? extends Callable<T>> callables)
-        throws InterruptedException {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public <T> List<Future<T>> invokeAll(
-        final Collection<? extends Callable<T>> callables, final long l, final TimeUnit timeUnit)
-        throws InterruptedException {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public <T> T invokeAny(final Collection<? extends Callable<T>> callables)
-        throws InterruptedException, ExecutionException {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public <T> T invokeAny(
-        final Collection<? extends Callable<T>> callables, final long l, final TimeUnit timeUnit)
-        throws InterruptedException, ExecutionException, TimeoutException {
-      throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public void execute(final Runnable runnable) {
-      throw new RejectedExecutionException();
-    }
-  }
-
-  public void testQueueSizeBasedSliceExecutor() throws Exception {
-    ThreadPoolExecutor service =
-        new ThreadPoolExecutor(
-            4,
-            4,
-            0L,
-            TimeUnit.MILLISECONDS,
-            new LinkedBlockingQueue<Runnable>(),
-            new NamedThreadFactory("TestIndexSearcher"));
-
-    runSliceExecutorTest(service, false);
-
-    TestUtil.shutdownExecutorService(service);
-  }
-
-  public void testRandomBlockingSliceExecutor() throws Exception {
-    ThreadPoolExecutor service =
-        new ThreadPoolExecutor(
-            4,
-            4,
-            0L,
-            TimeUnit.MILLISECONDS,
-            new LinkedBlockingQueue<Runnable>(),
-            new NamedThreadFactory("TestIndexSearcher"));
-
-    runSliceExecutorTest(service, true);
-
-    TestUtil.shutdownExecutorService(service);
-  }
-
-  private void runSliceExecutorTest(ThreadPoolExecutor service, boolean useRandomSliceExecutor)
-      throws Exception {
-    TaskExecutor taskExecutor =
-        useRandomSliceExecutor == true
-            ? new RandomBlockingTaskExecutor(service)
-            : new QueueSizeBasedExecutor(service);
-
-    IndexSearcher searcher = new IndexSearcher(reader.getContext(), service, taskExecutor);
-
-    Query[] queries = new Query[] {new MatchAllDocsQuery(), new TermQuery(new Term("field", "1"))};
-    Sort[] sorts = new Sort[] {null, new Sort(new SortField("field2", SortField.Type.STRING))};
-    ScoreDoc[] afters =
-        new ScoreDoc[] {null, new FieldDoc(0, 0f, new Object[] {newBytesRef("boo!")})};
-
-    for (ScoreDoc after : afters) {
-      for (Query query : queries) {
-        for (Sort sort : sorts) {
-          searcher.search(query, Integer.MAX_VALUE);
-          searcher.searchAfter(after, query, Integer.MAX_VALUE);
-          if (sort != null) {
-            TopDocs topDocs = searcher.search(query, Integer.MAX_VALUE, sort);
-            assertTrue(topDocs.totalHits.value > 0);
-
-            topDocs = searcher.search(query, Integer.MAX_VALUE, sort, true);
-            assertTrue(topDocs.totalHits.value > 0);
-
-            topDocs = searcher.search(query, Integer.MAX_VALUE, sort, false);
-            assertTrue(topDocs.totalHits.value > 0);
-
-            topDocs = searcher.searchAfter(after, query, Integer.MAX_VALUE, sort);
-            assertTrue(topDocs.totalHits.value > 0);
-
-            topDocs = searcher.searchAfter(after, query, Integer.MAX_VALUE, sort, true);
-            assertTrue(topDocs.totalHits.value > 0);
-
-            topDocs = searcher.searchAfter(after, query, Integer.MAX_VALUE, sort, false);
-            assertTrue(topDocs.totalHits.value > 0);
-          }
-        }
-      }
-    }
-  }
-
-  private static class RandomBlockingTaskExecutor extends TaskExecutor {
-
-    RandomBlockingTaskExecutor(Executor executor) {
-      super(executor);
-    }
-
-    @Override
-    boolean shouldExecuteOnCallerThread(int index, int numTasks) {
-      return random().nextBoolean();
+      assertEquals(leaves.size(), numExecutions.get());
     }
   }
 }
